--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -44,6 +44,7 @@
               %div.dropdown.pull-right{ style: "padding-top: 10px;" }
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();" }
                   = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;"
+                  %span.notifications_bubble 3
                 %ul.dropdown-menu{ role: "button", style: "padding:0; top:42px; right:-110px; min-width: 312px; min-height: 135px;" }
                   %div
                     %div.nub
