--- a/app/views/paths/show.html.haml
+++ b/app/views/paths/show.html.haml
@@ -24,7 +24,7 @@
               - if @enrolled_users.size < 4
                 = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
               - @enrolled_users.each do |u|
-                = render "shared/mosaic", { pic: u.profile_pic, link: user_path(u), title: u.name, subtitle: "Level #{u.level(@path)}, #{u.points(@path)} points" }
+                = render "shared/mosaic", { pic: u.profile_pic, link: profile_path(u.username), title: u.name, subtitle: "Level #{u.level(@path)}, #{u.points(@path)} points" }
           - if @enrolled_users.size > 4
             %div#challengeright_scroll
               %a{href: "javascript:challengeslide(\"right\");"}
@@ -39,7 +39,7 @@
             %li
               %span.rank= (i+1).to_s
               = image_tag entry.user.profile_pic 
-              = link_to truncate(entry.user.name, length: 22), entry.user, class: "name"
+              = link_to truncate(entry.user.name, length: 22), profile_path(entry.user.username), class: "name"
               %span.level lvl. #{entry.user.level(@path)}
               %span.points= entry.score
     %div.span11
