--- a/app/views/personas/_show.html.haml
+++ b/app/views/personas/_show.html.haml
@@ -46,7 +46,7 @@
       %div.mosaic-block.bar2{ style: (((i+1) % 4 == 0) ? "margin-right: 0px;" : "") }
         %div.details
           - if path.is_public
-            = link_to enroll_path_url(path), class: "mosaic-overlay", title: "#{path.name}" do
+            = link_to challenge_path(path.permalink), class: "mosaic-overlay", title: "#{path.name}" do
               %h4 #{truncate(path.name,length: 17, separator: ' ')}
               - if current_user.enrolled?(path)
                 %button.btn.btn-success Enrolled
