--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -11,7 +11,7 @@
         %ul#carousel_ul
           = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
           - @enrollments.each do |e|
-            = render "shared/mosaic", { pic: e.path.path_pic, link: path_path(e.path), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
+            = render "shared/mosaic", { pic: e.path.path_pic, link: challenge_path(e.path.permalink), title: e.path.name, subtitle: "Level #{e.level}, #{e.total_points} points" }
           = render "shared/mosaic", { custom_class: "addthis_button_facebook", link: "#", title: "Sharing is caring", subtitle: "Spread the Metabright Gospel!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/fb_green_carousel.png" }
           = render "shared/mosaic", { custom_class: "explore_link", link: "#", title: "The world awaits...", subtitle: "Explore new challenges!", pic: "https://s3.amazonaws.com/moonlite-nsdub/static/carousel_images/Stoney_image_carousel_altered.png" }
           - unless current_user.profile_complete?
