--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -50,7 +50,7 @@
             %li
               %div.dropdown.pull-right.notification-icon{ style: "padding-top: 10px;" }
                 %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();" }
-                  = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;"
+                  = image_tag "https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/notifications3.png", style: "width: 18px; height: 18px;", title: "Notifications"
                   - if unread_notification_count > 0
                     %span.notifications_bubble= unread_notification_count
                 %ul.dropdown-menu{ role: "button", style: "padding: 0 0 10px 0; top:42px; right:-110px; min-width: 312px; min-height: 135px;" }
