C:/RailsInstaller/Git/intro style fix

--- a/app/views/pages/intro.html.haml
+++ b/app/views/pages/intro.html.haml
@@ -10,7 +10,7 @@
 %div.intcontainer
   %div.firstchallengeint
     %div.firstchallengeintheader{ style:"padding: 7px 0 0 9px" }
-      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style: "width:42px; height:47px; margin:4px 4px 0 0;" }
+      %img{ src: "https://s3.amazonaws.com/moonlite-nsdub/static/stoney_50x66.png", style: "width:42px; height:47px; margin:4px 4px 0 0; vertical-align:baseline;" }
       %span{ style:"font-size:35px; position:relative; bottom:9px;" } Welcome to MetaBright!
     %hr{ style:"margin:0" }
     %div.introintcontent
