Voting fix for below the fold.

--- a/app/views/shared/_newsfeed.html.haml
+++ b/app/views/shared/_newsfeed.html.haml
@@ -4,7 +4,8 @@
     $(".display_sharing_icon").click(function(){ 
       $(this).parents(".leftstuff").find(".social_toolbar").css("display", "inline");
       $(this).parent().remove(); 
-    }); 
+    });
+    init_voting();
   });
   
 - if newsfeed_items.empty?
