gear icon into nav bar and hover effects

--- a/app/views/layouts/_navbar.html.haml
+++ b/app/views/layouts/_navbar.html.haml
@@ -71,10 +71,10 @@
                           %p.notification_body= event.content
                           %p.notification_time #{time_ago_in_words(event.created_at)} ago
             %li
-              %div.dropdown.pull-right.notification-icon{ style: "padding: 10px;" }
-                %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", onclick: "mark_notifications_as_read();", style: "padding:10px;" }
-                  %span.caret{ style: "color: whitesmoke; border-top-width: 5px; border-right-width: 5px; border-left-width: 5px; border-top-color: whitesmoke;" }
-                %ul.dropdown-menu{ role: "button", style: "margin:0px;padding: 0 0 0px 0; top:42px; right:-10px; min-width: 25px; min-height: 50px;" }
+              %div.dropdown.pull-right.notification-icon{ style: "padding-top:9px; padding-left:7px;" }
+                %a.dropdown-toggle{ href: "#", "data-toggle" => "dropdown", style: "padding:10px;" }
+                  %img{ src:"https://s3.amazonaws.com/moonlite-nsdub/static/nav+bar+icons/gear.png", style: "height:20px; width:20px;", title:"Settings"}
+                %ul.dropdown-menu{ role: "button", style: "margin:0px;padding: 0 0 0px 0; top:43px; right:-15px; min-width: 25px; min-height: 50px;" }
                   %li
                     %div
                       %div.nub{ style: "left: 62px;"}
