--- a/app/views/users/home.html.haml
+++ b/app/views/users/home.html.haml
@@ -42,4 +42,9 @@
       %div.newsfeed
         %div
           %div.leftboxheader Stream
-        = render "shared/newsfeed", { newsfeed_items: @newsfeed_items }
+        :javascript
+          $(function(){
+            $.ajax({ type: "GET", url: "#{newsfeed_path}", success: function(data){ $(".empty_post").replaceWith(data); } });
+          });
+        %div.post.empty_post{ style: "height: 300px;"}
+          %p There are no responses yet.
